tests/ui/consts/issue-73976-polymorphic.stderr
error[E0158]: constant pattern cannot depend on generic parameters
  --> $DIR/issue-73976-polymorphic.rs:20:37
   |
LL | impl<T: 'static> GetTypeId<T> {
   | -----------------------------
LL |     pub const VALUE: TypeId = TypeId::of::<T>();
   |     ----------------------- constant defined here
...
LL | const fn check_type_id<T: 'static>() -> bool {
   |                        - constant depends on this generic parameter
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^ `const` depends on a generic parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0158`.
